--- a/index.html
+++ b/index.html
@@ -29,26 +29,14 @@
  </td>
  <td width=18% align="center">
  <b>prawe menu</b>
- <ul>
- <li>
- <a href=???????????????>kliknij, aby ściągnąć plik</a>
- </li>
- <li>
- <a href="tabela_parniewicz.html" target="obszar_glowny">kliknij, aby
-zobaczyć tabelę</a>
- </li>
- <li>
- <a href="formularz_parniewicz.html" target="obszar_glowny">kliknij, aby
-zobaczyć formularz</a>
- </li>
- <li>
- <a href="?????????????????????????????">kliknij, aby wysłać pocztę</a>
- </li>
- <li>
- <a href="z1_z6_parniewicz.html" target="obszar_glowny">kliknij, aby
-zadania od Z1do Z6</a>
- </li>
- </ul>
+<map id="mapa_Parniewicz">
+ <area shape="poly" coords="75,69,105,23,137,69" href="plik.zip">
+ <area shape="circle" coords="106,118,136" href="tabela_Parniewicz.html" target="obszar_glowny">
+ <area shape="circle" coords="106,194,136" href="formularz_Parniewicz.html" target="obszar_glowny">
+ <area shape="rect" coords="59,240,157,294" href="sebastianparniewicz@gmail.com">
+ <area shape="rect" coords="48,270,23" href="z1_z6_Parniewicz.html" target="obszar_glowny">
+</map>
+ <img src="mapa.gif" alt="tutaj wybieraj linki" usemap="#mapa_Parniewicz"
  </td>
  </tr>
  <tr>
