--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
  </td>
  <td width=18% align="center">
  <b>prawe menu</b>
-
+<ul>
+ <li>
+ <a href=???????????????>kliknij, aby ściągnąć plik</a>
+ </li>
+ <li>
+ <a href="tabela_parniewicz.html" target="obszar_glowny">kliknij, aby
+zobaczyć tabelę</a>
+ </li>
+ <li>
+ <a href="formularz_parniewicz.html" target="obszar_glowny">kliknij, aby
+zobaczyć formularz</a>
+ </li>
+ <li>
+ <a href="?????????????????????????????">kliknij, aby wysłać pocztę</a>
+ </li>
+ <li>
+ <a href="z1_z6_parniewicz.html" target="obszar_glowny">kliknij, aby
+zadania od Z1do Z6</a>
+ </li>
+ </ul>
  </td>
  </tr>
  <tr>
