--- a/index.html
+++ b/index.html
@@ -29,26 +29,15 @@
  </td>
  <td width=18% align="center">
  <b>prawe menu</b>
-<ul>
- <li>
- <a href=???????????????>kliknij, aby ściągnąć plik</a>
- </li>
- <li>
- <a href="tabela_parniewicz.html" target="obszar_glowny">kliknij, aby
-zobaczyć tabelę</a>
- </li>
- <li>
- <a href="formularz_parniewicz.html" target="obszar_glowny">kliknij, aby
-zobaczyć formularz</a>
- </li>
- <li>
- <a href="?????????????????????????????">kliknij, aby wysłać pocztę</a>
- </li>
- <li>
- <a href="z1_z6_parniewicz.html" target="obszar_glowny">kliknij, aby
-zadania od Z1do Z6</a>
- </li>
- </ul>
+
+<map id="mapa_parniewicz">
+	<area shape="poly" coords="25,50, 49,10, 73,50"  href="plik.zip" target="obszar_glowny"/>
+	<area shape="circle" coords="50,85, 70"  href="Tabela_parniewicz.html" target="obszar_glowny"/>
+	<area shape="circle" coords="166,35, 31"  href="formularz_Parniewicz.html" target="obszar_glowny" />
+     <area shape="rect" coords="20,175, 210,80"  href="mailto:sebastianparniewicz@gmail.com/>
+     <area shape="rect" coords="20,233, 82,265"  href="z1_z6_parniewicz.html" target="obszar_glowny"/>
+</map>
+<img src="C:\Users\PC GAMING\Desktop\Szkoła\mapa.gif" alt="tutaj wybieramy linki" usemap="#mapa_parniewicz" width="100" height="300" />
  </td>
  </tr>
  <tr>
