--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <area shape="rect" coords="20,175, 210,80"  href="mailto:sebastianparniewicz@gmail.com/>
      <area shape="rect" coords="20,233, 82,265"  href="z1_z6_parniewicz.html" target="obszar_glowny"/>
 </map>
-<img src="C:\Users\PC GAMING\Desktop\Szkoła\mapa.gif" alt="tutaj wybieramy linki" usemap="#mapa_parniewicz" width="100" height="300" />
+<img src="mapa.gif" alt="tutaj wybieramy linki" usemap="#mapa_parniewicz" width="100" height="300" />
  </td>
  </tr>
  <tr>
