--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
  <b>prawe menu</b>
 
 <map id="mapa_parniewicz">
-	<area shape="poly" coords="25,50, 49,10, 73,50"  href="plik.zip" target="obszar_glowny"/>
-	<area shape="circle" coords="50,85, 70"  href="Tabela_parniewicz.html" target="obszar_glowny"/>
-	<area shape="circle" coords="166,35, 31"  href="formularz_Parniewicz.html" target="obszar_glowny" />
+	<area shape="poly" coords="25,50, 49,10, 73,50"  href="plik.zip" target="glowny_parniewicz"/>
+	<area shape="circle" coords="50,85, 70"  href="Tabela_parniewicz.html" target="glowny_parniewicz"/>
+	<area shape="circle" coords="166,35, 31"  href="formularz_Parniewicz.html" target="glowny_parniewicz" />
      <area shape="rect" coords="20,175, 210,80"  href="mailto:sebastianparniewicz@gmail.com/>
-     <area shape="rect" coords="20,233, 82,265"  href="z1_z6_parniewicz.html" target="obszar_glowny"/>
+     <area shape="rect" coords="20,233, 82,265"  href="z1_z6_parniewicz.html" target="glowny_parniewicz"/>
 </map>
 <img src="mapa.gif" alt="tutaj wybieramy linki" usemap="#mapa_parniewicz" width="100" height="300" />
  </td>
