--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  </head>
 <body>
  <table width=65% border="1" align="center">
+	 <img src="logo_zadanie_15_Parniewicz.png" border=3 align=left>
  <tr>
  <td colspan="3">
  <h1 align="center"> LOGO-Parniewicz </h1>
